Version ClaSS-0.8.20 release (2007/06/18)
-----------------------------------------



Version ClaSS-0.8.19 release (2007/05/31)
-----------------------------------------

Minor bugfix to edit_scores to make cancel button work - sub_action() was
not being called.

Tweaked the #ddd dull grey background colour to be less dull.

New scripts in the infobook and a new div on the student_view page to
display and edit enrolment properties of a student. Will also show the
history of their application in future. A new fetchEnrolment()
function added which is specicifically for this purpose and no other.

The enrolments and accomodation pages in the Admin book both now make
use of the new community_list scripts. Which should become general
purpose for listing sids and editing in any type of community in
future. These now allow click-throughs from the table of numbers to
the list of students relating to that position on the
accomodation/enrolment table. Enrolment fully working. Only partially
implemented for accomodation so far.

The access to enrolment communities through yeargroup_edit has now
been deprecated because of the above.

Two new css classes (hilife and lowlife).

Any sids not on current roll and listed in InfoBook are now
de-emphasised using the lowlife class.

New onchange js function for checkboxes in listmenus which
de-emphasises/emphasises the table row based on its checked status.

Made the event handlers for the checkrowIndicator part of loadRequired
and standardised the trId to have a "sid-" prefix to be consistent
with the sidtable functions.


Version ClaSS-0.8.18 release (2007/05/25)
-----------------------------------------

Consistently renamed the set_XXX vars scripts.

New functions to list_courses and list_course_stages.

In the Admin book, renamed the logcounter page and added a new option
to call from it which gives overall statistics for the current
academic year. Working towards more in depth stats.
